--- a/static/template/movie/popular.html
+++ b/static/template/movie/popular.html
@@ -18,7 +18,7 @@
             {% endif %} -->
             <div class="text-center mt-1">
                 <!-- <div class="muted">{{ m.overview }}</div> -->
-                <a href="{% url 'movie' movie_id %}" class="btn btn-dark my-2 btn-sm">View Details</a>
+                <a href="#" class="btn btn-dark my-2 btn-sm">View Details</a>
             </div>
         </div>
         {% endfor %}
